<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".RegisteryPage" >

    <TableRow
        android:id="@+id/rp_tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rp_tv_userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userid"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/rp_et_userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:digits="1234567890.-_abcdefghijklmnopqrstuvwxyz@"
            android:hint="@string/userid_hint"
            android:singleLine="true"
            android:textColor="@android:color/black" />
    </TableRow>

    <TableRow
        android:id="@+id/rp_tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rp_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/rp_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@android:color/black" />
    </TableRow>

    <TableRow
        android:id="@+id/rp_tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rp_tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/rp_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@android:color/black" />
    </TableRow>

    <TableRow
        android:id="@+id/rp_tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rp_tv_password_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_again"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/rp_et_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/password_again_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@android:color/black" />
    </TableRow>

    <TableRow
        android:id="@+id/rp_tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rp_tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/rp_sp_sex"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/sex_filter"
            android:prompt="@string/sex" />
    </TableRow>

    <TableRow
        android:id="@+id/rp_tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rp_tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/rp_et_age"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/age_hint"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@android:color/black" />
    </TableRow>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/rp_bt_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/rp_bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

    

</TableLayout>